--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   </head>
   <body>
@@ -48,7 +50,8 @@
 	</div>
 	</nav>
 
-	<br/> <ol></ol>  
+	<br/> <ol>
+		</ol>  
 	
 	
 	
@@ -66,30 +69,30 @@
 					
 				</div>
 				<div class="modal-body">
-					<div class="container-fluid">
-					<form>
+					<div class="container-fluid login">
+					<form id="login">
 						<div class="form-row">
 							<div class="col">
-								<input type="text" class="form-control reset" data-toggle="tooltip"
-								placeholder="First name" id="inputFirstName" disabled 
+								<input type="text" class="form-control reset for-user for-student for-developer" data-toggle="tooltip"
+								placeholder="First name" required id="name" disabled 
 								data-toggle="tooltip" data-placement="top" title="Select you type">
 							</div>
 							<div class="col">
-								<input type="text" class="form-control reset" 
-								placeholder="Last name" id="inputLastName" disabled>
+								<input type="text" class="form-control reset for-user for-student for-developer" 
+								placeholder="Last name" required id="surname" disabled>
 							</div> 
 						</div>
 						<div class="form-row">
 							<div class="col">
 								<label for="InputSpecialization"></label>
-								<input type="text" class="form-control reset" 
-								placeholder="Specialization" id="inputSpecialization" 
+								<input type="text" class="form-control reset for-student for-developer " 
+								placeholder="Specialization" id="specialization" 
 								 disabled>
 							</div>
 							<div class="col">
 								<label for="inputJobTitle"></label>
-								<input type="text" class="form-control reset" 
-								id="inputJobTitle" placeholder="Job Title" disabled>
+								<input type="text" class="form-control reset for-developer " 
+								id="jobTitle" placeholder="Job Title" disabled>
 							</div>
 						</div>
 						<label for="form-check-label"></label>
@@ -131,12 +134,12 @@
 										<div class="form-row">
 											<div class="col">
 												<label></label>
-												<input type="text" class="form-control  reset" 
+												<input type="text" class="form-control  reset for-user for-student for-developer" 
 												placeholder="Title" id="inputTitleSimple" disabled>
 											</div>
-											<div class="col">
+											<div class="col"> 
 												<label></label>
-												<input type="text" class="form-control  reset" 
+												<input type="text" class="form-control  reset for-user for-student for-developer" 
 												placeholder="Status" id="inputStatusSimple" disabled>
 											</div> 
 										</div>
@@ -154,18 +157,18 @@
 										<div class="form-row">
 											<div class="col">
 												<label></label>
-												<input type="text" class="form-control  reset" 
+												<input type="text" class="form-control  reset  for-student for-developer" 
 												placeholder="Title" id="inputTitleHome" disabled>
 											</div>
 											<div class="col">
 												<label></label>
-												<input type="text" class="form-control  reset" 
+												<input type="text" class="form-control  reset for-student for-developer" 
 												placeholder="Status" id="inputStatusHome" disabled>
 											</div> 
 										</div>
 										<div class="form-group">
 											<label for="exampleFormControlTextarea1"></label>
-											<textarea class="form-control  reset" placeholder="Description" 
+											<textarea class="form-control  reset for-student for-developer" placeholder="Description" 
 											id="descriptionHome" disabled></textarea>
 										</div>
 									</form>	
@@ -181,23 +184,23 @@
 										<div class="form-row">
 											<div class="col">
 												<label></label>
-												<input type="text" class="form-control  reset"
+												<input type="text" class="form-control  reset for-developer"
 												placeholder="Title" id="inputTitleProject" disabled>
 											</div>
 											<div class="col">
 												<label></label>
-												<input type="text" class="form-control  reset" 
+												<input type="text" class="form-control  reset for-developer" 
 												placeholder="Status" id="inputStatusProject" disabled>
 											</div> 
 										</div>
 										<div class="form-group">
 											<label for="exampleFormControlTextarea1"></label>
-											<textarea class="form-control  reset" placeholder="Description" id="descriptionProject"
+											<textarea class="form-control  reset for-developer" placeholder="Description" id="descriptionProject"
 											disabled></textarea>
 										</div>
 										<div class="form-row">
 											<label></label>
-											<input type="date" class="form-control  reset" name="calendar" 
+											<input type="date" class="form-control  reset for-developer" name="calendar" 
 											placeholder="Deadline date" id="inputDeadlineDateProject" disabled>
 										</div>
 									</form>	
@@ -226,10 +229,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 	<script src="js/style.js"></script>
-	<script src="js/object.js"></script>
+	<script  src="js/object.js"></script>
 	<script src="js/login.js"></script>
-	<script src="js/task.js"></script>
-	<script src="js/list.js"></script>
+	<script  src="js/task.js"></script>
 	
   </body>
 </html>
